@@ -24,7 +24,7 @@ requires "Text::MultiMarkdown" => "1.000034";
 requires "Try::Tiny" => "0.22";
 requires "Type::Tiny" => "1.000004";
 requires "Unexpected" => "v0.39.0";
-requires "Web::Components" => "v0.2.0";
+requires "Web::Components" => "v0.3.0";
 requires "Web::ComposableRequest" => "v0.2.0";
 requires "Web::Simple" => "0.030";
 requires "YAML::Tiny" => "1.67";
