@@ -34,7 +34,7 @@ Try::Tiny              = 0.22
 Type::Tiny             = 1.000004
 Web::Simple            = 0.030
 Unexpected             = v0.39.0
-Web::Components        = v0.2.0
+Web::Components        = v0.3.0
 Web::ComposableRequest = v0.2.0
 YAML::Tiny             = 1.67
 
